# pydigidoc

./: .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  README.md  RELINKING.md  TODO.md  pyproject.toml
.github/workflows/: build.yml
src/pydigidoc/: __init__.py
swig/: pydigidoc.i
tests/: conftest.py  test_basic.py
